<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_app_bar"/>

    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
        android:id="@+id/iv_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="58dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_anchor="@+id/iv_image_view"
        app:layout_anchorGravity="bottom|center">

        <TextView
            android:id="@+id/ex_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_tap_title" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_pinch_zoom_in"
            android:contentDescription="@string/plus" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_pinch_zoom_out"
            android:contentDescription="@string/minus" />

    </LinearLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>